--- a/res/layout/parcel_location_layout.xml
+++ b/res/layout/parcel_location_layout.xml
@@ -4,37 +4,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <fragment
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical" >
+        class="com.google.android.gms.maps.SupportMapFragment" 
+        android:layout_marginBottom="10dp"/>
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_weight="0"
+        android:gravity="bottom"
+        android:layout_margin="5dp"
+        android:orientation="horizontal" >
+
+        <com.porter.components.ButtonRegularFont
+            android:id="@+id/button_parcelLocation_share"
+            style="@style/button.roundcorner.bold"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="bottom"
-            android:orientation="horizontal" >
+            android:layout_marginRight="5dp"
+            android:text="SHARE" />
 
-            <com.porter.components.ButtonRegularFont
-                android:id="@+id/button_parcelLocation_share"
-                style="@style/button.roundcorner.bold"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:text="Share" />
-
-            <com.porter.components.ButtonRegularFont
-                android:id="@+id/button_parcelLocation_sms"
-                style="@style/button.roundcorner.bold"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:text="Sms" />
-        </LinearLayout>
+        <com.porter.components.ButtonRegularFont
+            android:id="@+id/button_parcelLocation_sms"
+            style="@style/button.roundcorner.bold"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:text="SMS" />
     </LinearLayout>
 
 </LinearLayout>
